--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ember-template-lint": "^3.2.0",
     "ember-truth-helpers": "^3.0.0",
     "ember-welcome-page": "^4.0.0",
+    "emberfire": "^2.0.10",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-ember": "^10.3.0",
